# Blue_OCR

./: .gitignore  CMakeLists.txt  README.md  config.ini  main.cpp
Include/: infer.h  interface.h
Source/: infer.cpp  interface.cpp
include/: infer.h  interface.h  main.h
models/det_model/: det_model.xml
source/: infer.cpp  interface.cpp  main.cpp
